@@ -13,7 +13,8 @@ Verilator 4.227 devel
 
 **Minor:**
 
-Fix crash in gate optimization of circular logic (#3543). [Bill Flynn]
+* Fix crash in gate optimization of circular logic (#3543). [Bill Flynn]
+* Fix typedef'ed class conversion to boolean (#3616). [Aleksander Kiryk]
 
 
 Verilator 4.226 2022-08-31
